# Fraud-Prediction-AI-MVP

./: .replit  package-lock.json  package.json  pyproject.toml  redeploy.txt  replit.md  staticwebapp.config.json  tailwind.config.ts
.github/workflows/: azure-static-web-apps-thankful-forest-080eaad03.yml  deploy-backend.yml
attached_assets/: Pasted-You-are-a-senior-full-stack-Azure-AI-developer-building_1770039210577.txt  Pasted-You-are-fixing-and-improving-an-existing-MVP-Fraud-Pred_1770120676335.txt  Pasted-You-are-fixing-and-improving-an-existing-MVP-Fraud-Pred_1770207935990.txt  Pasted-You-are-fixing-and-updating-an-existing-MVP-Fraud-Predi_1770120866668.txt  Pasted-You-are-fixing-bugs-and-majorly-updating-an-existing-MV_1770128910344.txt  Pasted-You-are-fixing-bugs-and-updating-an-existing-MVP-Fraud-_1770124629901.txt  Pasted-You-are-making-final-improvements-and-fixes-to-an-exist_1770272826164.txt  Pasted-You-are-refactoring-and-completing-an-existing-MVP-Frau_1770186938185.txt  Pasted-You-are-updating-an-existing-production-grade-MVP-Fraud_1770114929847.txt
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/db/: cosmos.py  cosmos_old_backup.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: auth.py  claims.py  organizations.py
backend/app/services/: auth.py  azure_ad_auth.py  blob_storage.py  llm_analyzer.py  (+5 more)
client/: index.html
client/public/: staticwebapp.config.json
client/src/: App.tsx  index.css
server/: index.ts  llm-analyzer.ts  routes.ts  rules-engine.ts  seed.ts  storage.ts
shared/: schema.ts
(+27 files in other folders)
